--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
